log
Thu 25 Apr 2024 12:35:32 AM UTC: 
 tests:  0|6
total_score: 0/70
2454f2c
Thu 25 Apr 2024 12:55:39 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
ed1301e
Thu 25 Apr 2024 12:56:49 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
e2e2419
Thu 25 Apr 2024 01:08:38 AM UTC: 
 hashmap.c | 20 +++++++++++++++++---
 1 file changed, 17 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:40: error: expected ‘;’ before ‘}’ token
   54 |         pos = (pos + 1) % map->capacity
      |                                        ^
      |                                        ;
......
   57 |       }
      |       ~                                 
Compilation failed
a2e50ed
Thu 25 Apr 2024 01:08:52 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1f2594c
Thu 25 Apr 2024 01:09:53 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|4
total_score: 30/70
f08c509
Thu 25 Apr 2024 01:25:08 AM UTC: 
 hashmap.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
943cbf4
Thu 25 Apr 2024 01:27:42 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
a11c2f3
Thu 25 Apr 2024 01:28:39 AM UTC: 
 hashmap.c | 11 +++--------
 1 file changed, 3 insertions(+), 8 deletions(-)
 tests:  0|0
d3c3b2f
Thu 25 Apr 2024 01:31:12 AM UTC: 
 hashmap.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
 tests:  8|3
total_score: 40/70
eb1dff8
Thu 25 Apr 2024 01:37:37 AM UTC: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
8ec39c5
Thu 25 Apr 2024 01:45:14 AM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
33488d2
Thu 25 Apr 2024 01:47:26 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:140:1: error: control reaches end of non-void function [-Werror=return-type]
  140 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7380601
